Updated to avoid few errors related to Java 11 and Java 9: Converted to Java 8